--- a/style.css
+++ b/style.css
@@ -1,21 +1,26 @@
 body {
-  background-image: url("map.png");
-  background-color: #cccccc;
   font-size: 14px;
 }
+nav {
+  background-color: yellow;
+  height: 100px;
+  margin-top: -10px;
+  position: fixed;
+  width: 100%;
+}
 #navcontainer {
-  padding-top: 5px;
+  padding-top: 45px;
 }
 #navlist li {
   display: inline;
   list-style-type: none;
-  padding-left: 0px;
+  padding-left: 25px;
   font-size: 50px;
   text-decoration: none;
   font-variant: small-caps;
   font-family: sans-serif;
   color: white;
-  margin-right: 2.5em;
+  margin-right: 3em;
 }
 section {
   margin: 0 auto;
@@ -27,13 +32,14 @@ h3 {
   font-family: sans-serif;
   font-size: 2.5em;
   padding-top: 20px;
-  padding-left: 25px;
+  padding-left: 15px;
   font-variant: small-caps;
   color: white;
 }
 .element {
   background-color: teal;
   height: 220px;
+  margin: 10px 0;
   width: 100%;
   opacity: 80%;
 }
