--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
   background-image: url("map.png");
   background-color: #cccccc;
+  background-size: cover;
   font-size: 14px;
 }
 #navcontainer {
