--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@ body {
 #navlist li {
   display: inline;
   list-style-type: none;
+}
+.style1 {
   font-size: 50px;
   text-decoration: none;
   font-variant: small-caps;
@@ -18,6 +20,79 @@ body {
   color: white;
   margin-right: 2.5em;
 }
+.style2 {
+  font-size: 50px;
+  text-decoration: none;
+  font-variant: small-caps;
+  font-family: sans-serif;
+  color: white;
+  margin-right: 2.5em;
+}
+.style3 {
+  font-size: 50px;
+  text-decoration: none;
+  font-variant: small-caps;
+  font-family: sans-serif;
+  color: white;
+  margin-right: 2.5em;
+}
+.style4 {
+  font-size: 50px;
+  text-decoration: none;
+  font-variant: small-caps;
+  font-family: sans-serif;
+  color: white;
+  margin-right: 2.5em;
+}
+.style5 {
+  font-size: 50px;
+  text-decoration: none;
+  font-variant: small-caps;
+  font-family: sans-serif;
+  color: white;
+  margin-right: 2.5em;
+}
+.style6 {
+  font-size: 50px;
+  text-decoration: none;
+  font-variant: small-caps;
+  font-family: sans-serif;
+  color: white;
+  margin-right: 2.5em;
+}
+.style7 {
+  font-size: 50px;
+  text-decoration: none;
+  font-variant: small-caps;
+  font-family: sans-serif;
+  color: white;
+  margin-right: 2.5em;
+}
+.style8 {
+  font-size: 50px;
+  text-decoration: none;
+  font-variant: small-caps;
+  font-family: sans-serif;
+  color: white;
+  margin-right: 2.5em;
+}
+.style9 {
+  font-size: 50px;
+  text-decoration: none;
+  font-variant: small-caps;
+  font-family: sans-serif;
+  color: white;
+  margin-right: 2.5em;
+}
+.style10 {
+  font-size: 50px;
+  text-decoration: none;
+  font-variant: small-caps;
+  font-family: sans-serif;
+  color: white;
+  margin-right: 2.5em;
+}
+
 section {
   margin: 0 auto;
   width: 90%;
