--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("map.png") repeat 0 0;;
+  background: url('map.png') repeat 0 0;;
   background-color: #cccccc;
   background-position: center;
   font-size: 14px;
@@ -18,7 +18,7 @@ body {
   font-variant: small-caps;
   font-family: sans-serif;
   color: white;
-  margin-right: 2.5em;
+  margin-right: 0em;
 }
 .style2 {
   font-size: 50px;
@@ -26,7 +26,7 @@ body {
   font-variant: small-caps;
   font-family: sans-serif;
   color: white;
-  margin-right: 2.5em;
+  margin-right: 7em;
 }
 .style3 {
   font-size: 50px;
@@ -34,7 +34,7 @@ body {
   font-variant: small-caps;
   font-family: sans-serif;
   color: white;
-  margin-right: 2.5em;
+  margin-right: 7em;
 }
 .style4 {
   font-size: 50px;
@@ -42,7 +42,7 @@ body {
   font-variant: small-caps;
   font-family: sans-serif;
   color: white;
-  margin-right: 2.5em;
+  margin-right: 2.9em;
 }
 .style5 {
   font-size: 50px;
@@ -50,7 +50,7 @@ body {
   font-variant: small-caps;
   font-family: sans-serif;
   color: white;
-  margin-right: 2.5em;
+  margin-right: 5.8em;
 }
 .style6 {
   font-size: 50px;
@@ -58,7 +58,7 @@ body {
   font-variant: small-caps;
   font-family: sans-serif;
   color: white;
-  margin-right: 2.5em;
+  margin-right: 1.3em;
 }
 .style7 {
   font-size: 50px;
@@ -66,7 +66,7 @@ body {
   font-variant: small-caps;
   font-family: sans-serif;
   color: white;
-  margin-right: 2.5em;
+  margin-right: 2.9em;
 }
 .style8 {
   font-size: 50px;
@@ -74,7 +74,7 @@ body {
   font-variant: small-caps;
   font-family: sans-serif;
   color: white;
-  margin-right: 2.5em;
+  margin-right: 4.2em;
 }
 .style9 {
   font-size: 50px;
@@ -82,7 +82,7 @@ body {
   font-variant: small-caps;
   font-family: sans-serif;
   color: white;
-  margin-right: 2.5em;
+  margin-right: 6.6em;
 }
 .style10 {
   font-size: 50px;
