--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,10 @@ body {
   font-variant: small-caps;
   font-family: sans-serif;
   color: white;
-  margin-right: 0em;
+  display: inline-block;
+  padding-right: 5em;
+  float: left;
+  width: 75%;
 }
 .style2 {
   font-size: 50px;
@@ -27,7 +30,11 @@ body {
   font-variant: small-caps;
   font-family: sans-serif;
   color: white;
-  margin-right: 6em;
+  padding-right: 5em;
+  display: inline-block;
+  float: left;
+  text-align: right;
+  width: 25%;
 }
 .style3 {
   font-size: 50px;
