--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+li {
+  width: 10%;
+  display: inline-block;
+  vertical-align: top;
+}
+#statusbar li {
+  text-align: center;
+  padding: 0;
+}
+.statusbar {
+  text-align: center;
+}
 * {
   box-sizing: border-box;
 }
@@ -30,14 +42,16 @@ body {
   color: white;
   width: 70%;
 }
-.bar {
+.statusbar {
   background: rgba(0,0,0,0.7);
   height: 132px;
   padding: 0;
   margin: 0;
+  text-align: right;
 }
 .text {
   color: #fff;
+  padding-left: 45px;
   display: inline-block;
   list-style-type: none;
 }
@@ -45,10 +59,10 @@ section {
   margin: 0 auto;
   width: 90%;
   padding-top: 10px;
+  text-align: left;
 }
 p {
-  padding-top: 50px;
-  padding-left: 60px;
+  padding-top: 25px;
   padding-right: 200px;
   font-size: 48px;
   font-family: sans-serif;
@@ -78,13 +92,6 @@ h3 {
 ul {
   padding-top: 32px;
 }
-
-coverage {
-
-}
-wifi {
-
-}
-battery {
-
+img {
+  padding-top: 20px
 }
